Integrated Kafka and PySpark

--- a/BankAppService/pom.xml
+++ b/BankAppService/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.6</version>
+        <version>3.4.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.bankingApp</groupId>
@@ -98,6 +98,22 @@
     <artifactId>commons-csv</artifactId>
     <version>1.10.0</version>
 </dependency>
+
+
+<dependency>
+    <groupId>org.apache.kafka</groupId>
+    <artifactId>kafka-clients</artifactId>
+    <version>3.6.0</version>
+  </dependency>
+
+  
+<dependency>
+    <groupId>org.springframework.kafka</groupId>
+    <artifactId>spring-kafka</artifactId>
+    <version>3.3.7</version> <!-- Use a version compatible with your Spring Boot version -->
+</dependency>
+
+
     </dependencies>
 
     <build>
